--- a/profile_page/templates/profile_page/profile_content.html
+++ b/profile_page/templates/profile_page/profile_content.html
@@ -1,6 +1,6 @@
 {% load static %}
-<link href="{% static 'profile_page/css/cropper.min.css' %}" rel="stylesheet">
-<script defer src="{% static 'profile_page/js/cropper.min.js' %}"></script>
+<link href="{% static 'profile_page/css/cropper/cropper.min.css' %}" rel="stylesheet">
+<script defer src="{% static 'profile_page/js/cropper/cropper.min.js' %}"></script>
 
 <script defer src="{% static 'profile_page/js/profile_content.js' %}"></script>
 <script defer src="{% static 'profile_page/js/banner_profile.js' %}"></script>
