--- a/plasma/templates/r.html
+++ b/plasma/templates/r.html
@@ -28,7 +28,7 @@
 
     <div class="container">
         <div class="form-container my-3">
-            <h1 class="text-blue text-center fw-bold mb-4 mt-4">Plasma</h1>
+            <a href="/" class="d-block text-center mb-2"><img src="{% static 'profile_page/images/logos/p_logo/color/f_logo_RGB-Blue_58.png' %}" alt=" " class="py-1"></a>
             <h4 class="text-center mb-4">Register to make friends on Plasma</h4>
             <form action="/r/" method="POST" id="id_form">
                 {% csrf_token %}
