--- a/plasma/templates/s.html
+++ b/plasma/templates/s.html
@@ -18,7 +18,7 @@
 
     <div class="container">
         <div class="form-container my-3">
-            <h1 class="text-blue text-center fw-bold mb-4 mt-4">Plasma</h1>
+            <a href="/" class="d-block text-center mb-2"><img src="{% static 'profile_page/images/logos/p_logo/color/f_logo_RGB-Blue_58.png' %}" alt=" " class="py-1"></a>
             <div>
                 {% if messages %}
                 {% for message in messages %}
