--- a/profile_page/templates/profile_page/unauth_navbar.html
+++ b/profile_page/templates/profile_page/unauth_navbar.html
@@ -4,21 +4,26 @@
 
 <!-- Navbar starts from here -->
 <nav class="nbar">
-    <div class="container d-flex">
-        <div class="header-container d-flex">
-            <div class="nav-header my-auto">
-                <h1><a href="/">Plasma</a></h1>
-            </div>
-            <div class="my-auto mx-2">
-                <button id="toggle-sidebar" class="fas fa-bars my-auto" style="color: var(--theme2);font-size: x-large;"></button>
-            </div>
+    <div class="d-flex">
+        <div class="my-auto mx-2">
+            <button id="toggle-sidebar" class="fas fa-bars my-auto" style="color: var(--theme2);font-size: x-large;"></button>
         </div>
-        <div class="d-flex nav-options-container">
-            <div class="my-auto mx-2">
-                <a href="/s/" class="btn-sm border-btn-blue" style="font-size: medium;" name="Sign in">Sign in</a>
+        <div class="container d-flex">
+            <div class="header-container d-flex">
+                <div class="nav-header my-auto">
+                    <a href="/"><img src="{% static 'profile_page/images/logos/p_logo/color/f_logo_RGB-Blue_58.png' %}" alt=" " class="py-1" style="height:52px;"></a>
+                </div>
+                <div class="search-container my-auto mx-2 w-50">
+                    <input type="search" class="form-control" placeholder="Search" style="border-radius: 17px!important;background-color: #f2f3f5!important;">
+                </div>
             </div>
-            <div class="my-auto mx-2">
-                <a href="/r/" class="btn-sm border-btn-blue" style="font-size: medium;" name="Register">Register</a>
+            <div class="d-flex nav-options-container">
+                <div class="my-auto mx-2">
+                    <a href="/s/" class="btn-sm border-btn-blue" style="font-size: medium;" name="Sign in">Sign in</a>
+                </div>
+                <div class="my-auto mx-2">
+                    <a href="/r/" class="btn-sm border-btn-blue" style="font-size: medium;" name="Register">Register</a>
+                </div>
             </div>
         </div>
     </div>
