show more button fixed in posts loaded to 'load more' button click

--- a/profile_page/templates/profile_page/profile_content.html
+++ b/profile_page/templates/profile_page/profile_content.html
@@ -226,7 +226,7 @@
 									$('#{{i.0.pk}}-show-more-btn').find('span').addClass('caption-height');
 									$('#{{i.0.pk}}-show-more-btn').find('span').addClass('overflow-hidden');
 
-									$('#{{i.0.pk}}-show-more-btn').parent().append(`<button name="show-more" class="underline-hover text-blue show-more-caption-btn fw-bold">Show more</button>`);
+									$('#{{i.0.pk}}-show-more-btn').append(`<button name="show-more" class="underline-hover text-blue show-more-caption-btn fw-bold px-0">Show more</button>`);
 								}
 							</script>
 						</div>
