--- a/plasma/templates/r.html
+++ b/plasma/templates/r.html
@@ -22,6 +22,8 @@
 
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+    <link rel="shortcut icon" href="{% static 'profile_page/images/logos/color/f_logo_RGB-Blue_58.png' %}" type="image/x-icon">
 </head>
 
 <body>
