--- a/profile_page/templates/profile_page/base.html
+++ b/profile_page/templates/profile_page/base.html
@@ -23,6 +23,8 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'profile_page/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'profile_page/css/alert.css' %}">
+
+    <link rel="shortcut icon" href="{% static 'profile_page/images/logos/color/f_logo_RGB-Blue_58.png' %}" type="image/x-icon">
 </head>
 
 <body>
