--- a/plasma/static/css/home.css
+++ b/plasma/static/css/home.css
@@ -3,3 +3,10 @@
     --theme2: #0f82eb;
     --hovercolor: #ddd;
 }
+
+.home-content {
+	overflow-y: auto;
+	height: 100%;
+	flex: 1;
+	background-color: #f2f3f5;
+}
