--- a/profile_page/templates/profile_page/base.html
+++ b/profile_page/templates/profile_page/base.html
@@ -80,6 +80,7 @@ crossorigin="anonymous"></script>
 
 <script defer src="{% static 'profile_page/js/global.js' %}"></script>
 <script defer src="{% static 'profile_page/js/alert.js' %}"></script>
+<script src="{% static 'js/ultimate.js' %}"></script>
 {% block script %}{% endblock %}
 
 </html>
