--- a/profile_page/templates/profile_page/profile_content.html
+++ b/profile_page/templates/profile_page/profile_content.html
@@ -337,7 +337,7 @@
 
 							<div class="simi-banner">
 								{% if i.banner != '' %}
-								<img class="w-100" src="/media/{{i.banner}}" alt="">
+								<img class="w-100" src="/media/{{i.banner}}" alt="" style="height: auto;">
 								{% else %}
 								<div class="bg-dark" id="id_banner_img" style="width: 100%;height: 100px;"></div>
 								{% endif %}
