--- a/profile_page/templates/profile_page/profile_content.html
+++ b/profile_page/templates/profile_page/profile_content.html
@@ -268,7 +268,7 @@
 						</div>
 						<div class="e-comments border-top">
 							<div class="add-comment-container py-3">
-								<input type="text" class="form-control w-100 transparent-inp" placeholder="Say something..." style="border-bottom: 1px solid rgba(128, 128, 128, 0.2)!important;">
+								<input type="text" name="add-comment-input" id="add-comment-{{i.0.pk}}" class="form-control w-100 transparent-inp" placeholder="Say something..." style="border-bottom: 1px solid rgba(128, 128, 128, 0.2)!important;">
 							</div>
 							<div class="e-comments-fluid py-3">
 								<div class="e-comments-items"></div>
