--- a/profile_page/templates/profile_page/navbar.html
+++ b/profile_page/templates/profile_page/navbar.html
@@ -19,7 +19,7 @@
             </div>
             <div class="d-flex nav-options-container">
                 <div class="my-auto mx-2">
-                    <a href="/notifications/" class="fas fa-bell" name="Notifications"></a>
+                    <button class="fas fa-bell" id="notifications-loader" name="Notifications" style="font-size: x-large;"></button>
                 </div>
                 <div class="my-auto mx-2 nav-user-photo">
                     {% if profile.avatar != '' %}
@@ -55,4 +55,11 @@
         </div>
 
     </div>
+
+    <div class="notifications-dropdown px-3 py-3" style="display: none;">
+        <div class="notifications-fluid" style="height: 500px;width: 400px;">
+            <h4 class="px-3 pt-3" style="color: grey;">Notifications</h4><hr>
+        </div>
+    </div>
+
 </nav>
